config-root/namespaces/jx-staging/go-http-desktop/go-http-desktop-go-http-desktop-deploy.yaml
# Source: go-http-desktop/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-http-desktop-go-http-desktop
  labels:
    draft: draft-app
    chart: "go-http-desktop-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: go-http-desktop-go-http-desktop
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: go-http-desktop-go-http-desktop
    spec:
      serviceAccountName: go-http-desktop-go-http-desktop
      containers:
        - name: go-http-desktop
          image: "10.111.107.146/twotired/go-http-desktop:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
