config-root/namespaces/jx-staging/go-http-desktop/go-http-desktop-svc.yaml
# Source: go-http-desktop/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-http-desktop
  labels:
    chart: "go-http-desktop-0.0.3"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: go-http-desktop-go-http-desktop
